starlink/ocp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: starlink-predictor
  labels:
    app: starlink-predictor
spec:
  ports:
  - port: 35001
    targetPort: 35001
    protocol: TCP
    name: http
  selector:
    app: tme-aix-wb02  # Replace with your notebook pod label
